--- a/labs/lab07_cellular_automata.ipynb
+++ b/labs/lab07_cellular_automata.ipynb
@@ -43,11 +43,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "%matplotlib inline\n",
-        "from dataclasses import dataclass\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
@@ -82,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -210,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,7 +223,7 @@
         }
       ],
       "source": [
-        "def from_str_array(string:str):\n",
+        "def arrayfrom_str(string:str):\n",
         "  \"\"\"takes a text string of 0's and 1's and returns a 1D array with matching integer values\"\"\"\n",
         "  a = np.array([int(char) for char in list(string)])\n",
         "  return a\n",
@@ -239,7 +238,7 @@
         "\n",
         "\n",
         "\n",
-        "from_str_array('01000001'), rand_array(5, 0.5)"
+        "arrayfrom_str('01000001'), rand_array(5, 0.5)"
       ],
       "metadata": {
         "pycharm": {
@@ -283,27 +282,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [],
       "source": [
-        "@dataclass\n",
         "class cell_1D:\n",
-        "  rule: int\n",
-        "  start_state: np.ndarray\n",
+        "  def __init__(self, decimalrule, starting_array):\n",
         "\n",
-        "  def __init__(self):\n",
+        "    self.decimalrule = decimalrule\n",
+        "    self.binaryrule_arr = get_lookup_table(rule)\n",
+        "\n",
+        "    self.step_progress = 0\n",
+        "    self.start_state = np.reshape(starting_array, self.step_progress, starting_array.shape[1])\n",
         "\n",
         "\n",
-        "  @classmethod\n",
-        "  def simulate(cls, self.rule, steps):\n",
-        "\n",
-        "    simulate_ca()\n",
-        "\n",
-        "  @classmethod\n",
         "  def step(cls):\n",
+        "    \"\"\"Simulate a single step\"\"\"\n",
+        "    c = np.correlate(self.start_state, binaryrule_arr, mode='same')\n",
+        "    self.start_state = c\n",
         "\n",
-        "  @classmethod\n",
-        "  def draw(cls):"
+        "  def simulate(cls, num_cells, steps):\n",
+        "    \"\"\"given cells and a number of steps, simulate them for an end-result.\"\"\"\n",
+        "    while self.step_progress != steps:\n",
+        "      self.step_progress += 1\n",
+        "      self.step()\n",
+        "    sim = simulate_ca(num_cells, steps, self.rule)\n",
+        "    return sim\n",
+        "\n",
+        "  def draw(cls, simulation):\n",
+        "    \"\"\"given a simulation, plot and show a representation of the simulation\"\"\"\n",
+        "    plot_ca(simulation)\n",
+        "\n",
+        "  def sim_binarystr_input(rulenum: int, onesandzeros: str):\n",
+        "    starting_array = arrayfrom_str(onesandzeros)\n",
+        "    autom = cell_1D(self, rulenum, starting_array)\n",
+        "    cell_1D.draw(autom)\n",
+        "\n",
+        "  def sim_randarray_input(rulenum:int, lengthint: int, probability: float):\n",
+        "    starting_array = rand_array(lengthint, probability)\n",
+        "    rand_autom = cell_1D(self, rulenum, starting_array)\n",
+        "    cell_1D.draw(rand_autom)\n"
       ],
       "metadata": {
         "pycharm": {
@@ -346,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "# Solution for Ex. 3 here..."
@@ -377,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
