--- a/labs/lab07_cellular_automata.ipynb
+++ b/labs/lab07_cellular_automata.ipynb
@@ -303,24 +303,20 @@
         "  def __init__(self, decimalrule, starting_array):\n",
         "\n",
         "    self.decimalrule = decimalrule\n",
-        "    self.binaryrule_arr = get_lookup_table(decimalrule)\n",
+        "    self.binaryrule = get_lookup_table(decimalrule)\n",
         "\n",
         "    self.all_states = starting_array\n",
-        "    self.step_progress = 0\n",
-        "    self.start_state = np.reshape(starting_array, self.step_progress, starting_array.shape[-1])\n",
         "\n",
         "\n",
         "  def step(self):\n",
         "    \"\"\"Simulate a single, additional step\"\"\"\n",
-        "    correl_array = np.correlate(self.start_state, self.binaryrule_arr, mode='same')\n",
+        "    correl_array = np.correlate(, self.binaryrule_arr, mode='same')\n",
         "    self.all_states.vstack(correl_array)\n",
         "\n",
-        "  def simulate(self, num_cells, steps):\n",
+        "  def simulate(self, steps):\n",
         "    \"\"\"given cells and a number of steps, simulate them for an end-result.\"\"\"\n",
-        "    while self.step_progress != steps:\n",
-        "      self.step_progress += 1\n",
-        "      self.step()\n",
-        "    sim = simulate_ca(num_cells, steps, self.rule)\n",
+        "    num_cells = self\n",
+        "    sim = simulate_ca(num_cells, steps, self.binaryrule)\n",
         "    return sim\n",
         "\n",
         "  def draw(self, simulation):\n",
