--- a/labs/lab07_cellular_automata.ipynb
+++ b/labs/lab07_cellular_automata.ipynb
@@ -282,19 +282,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "tuple index out of range",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-1-13a1ef83f4f7>, line 12)",
           "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-37a0d745dad6>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0mrand_autom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrand_autom\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m \u001b[0mcell_1D\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msim_binarystr_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m90\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'000000000010000000000'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m \u001b[0mcell_1D\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msim_randarray_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m90\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-5-37a0d745dad6>\u001b[0m in \u001b[0;36msim_binarystr_input\u001b[0;34m(cls, rulenum, onesandzeros)\u001b[0m\n\u001b[1;32m     30\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0msim_binarystr_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrulenum\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0monesandzeros\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0mstarting_array\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marrayfrom_str\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monesandzeros\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m     \u001b[0mautom\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcell_1D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrulenum\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstarting_array\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m     \u001b[0mautom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mautom\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-5-37a0d745dad6>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, decimalrule, starting_array)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall_states\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstarting_array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep_progress\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstarting_array\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep_progress\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstarting_array\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-13a1ef83f4f7>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    correl_array = np.correlate(, self.binaryrule_arr, mode='same')\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ],
@@ -302,21 +297,19 @@
         "class cell_1D:\n",
         "  def __init__(self, decimalrule, starting_array):\n",
         "\n",
+        "    self.num_cells = starting_array.shape[1]\n",
         "    self.decimalrule = decimalrule\n",
         "    self.binaryrule = get_lookup_table(decimalrule)\n",
-        "\n",
-        "    self.all_states = starting_array\n",
+        "    self.current_state = starting_array\n",
         "\n",
         "\n",
         "  def step(self):\n",
         "    \"\"\"Simulate a single, additional step\"\"\"\n",
-        "    correl_array = np.correlate(, self.binaryrule_arr, mode='same')\n",
-        "    self.all_states.vstack(correl_array)\n",
+        "    correl_array = np.correlate(self.current_state, self.binaryrule, mode='same')\n",
         "\n",
         "  def simulate(self, steps):\n",
         "    \"\"\"given cells and a number of steps, simulate them for an end-result.\"\"\"\n",
-        "    num_cells = self\n",
-        "    sim = simulate_ca(num_cells, steps, self.binaryrule)\n",
+        "    sim = simulate_ca(self.num_cells, steps, self.binaryrule)\n",
         "    return sim\n",
         "\n",
         "  def draw(self, simulation):\n",
@@ -327,13 +320,13 @@
         "  def sim_binarystr_input(cls, rulenum: int, onesandzeros: str):\n",
         "    starting_array = arrayfrom_str(onesandzeros)\n",
         "    autom = cell_1D(rulenum, starting_array)\n",
-        "    autom.draw(autom.all_states)\n",
+        "    autom.draw(autom.)\n",
         "\n",
         "  @classmethod\n",
         "  def sim_randarray_input(cls, rulenum:int, lengthint: int, probability: float):\n",
         "    starting_array = rand_array(lengthint, probability)\n",
         "    rand_autom = cell_1D(rulenum, starting_array)\n",
-        "    rand_autom.draw(rand_autom.all_states)\n",
+        "\n",
         "\n",
         "cell_1D.sim_binarystr_input(90, '000000000010000000000')\n",
         "cell_1D.sim_randarray_input(90, 100, 0.1)"
@@ -349,9 +342,9 @@
         "id": "Wb7r1tBwYEbA",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 339
+          "height": 106
         },
-        "outputId": "fb8e376c-f75a-4126-ef13-db421621a943"
+        "outputId": "d3cd3f5c-3955-410f-b8d4-aa0fb4867b35"
       }
     },
     {
