--- a/labs/lab07_cellular_automata.ipynb
+++ b/labs/lab07_cellular_automata.ipynb
@@ -297,20 +297,21 @@
         "class cell_1D:\n",
         "  def __init__(self, decimalrule, starting_array):\n",
         "\n",
-        "    self.num_cells = starting_array.shape[1]\n",
         "    self.decimalrule = decimalrule\n",
         "    self.binaryrule = get_lookup_table(decimalrule)\n",
-        "    self.current_state = starting_array\n",
-        "\n",
+        "    self.start_state = starting_array\n",
         "\n",
         "  def step(self):\n",
         "    \"\"\"Simulate a single, additional step\"\"\"\n",
-        "    correl_array = np.correlate(self.current_state, self.binaryrule, mode='same')\n",
+        "    correl_array = np.correlate(self.start_state, self.binaryrule, mode='same')\n",
+        "    self.start_state = correl_array\n",
         "\n",
-        "  def simulate(self, steps):\n",
-        "    \"\"\"given cells and a number of steps, simulate them for an end-result.\"\"\"\n",
-        "    sim = simulate_ca(self.num_cells, steps, self.binaryrule)\n",
-        "    return sim\n",
+        "def simulate_ca(self, n_steps):\n",
+        "    \"\"\" Generate a CA with given number of cells, plot progression of rule for given number of time steps \"\"\"\n",
+        "    ca_timesteps = np.vstack([self.start_state, np.zeros((n_steps, len(self.start_state)), dtype=np.uint8)])\n",
+        "    for t in range(1, n_steps):\n",
+        "        ca_timesteps[t] = transition(ca_timesteps[t-1], self.binaryrule)\n",
+        "    return ca_timesteps\n",
         "\n",
         "  def draw(self, simulation):\n",
         "    \"\"\"given a simulation, plot and show a representation of the simulation\"\"\"\n",
