--- a/labs/lab07_cellular_automata.ipynb
+++ b/labs/lab07_cellular_automata.ipynb
@@ -303,7 +303,7 @@
         "\n",
         "  @classmethod\n",
         "  def sim_binarystr_input(cls, n_steps, rulenum: int, onesandzeros: str):\n",
-        "    \"\"\"factory\"\"\"\n",
+        "    \"\"\"Factory and drawer for automata based on a number of steps, the decimal-form rule number, and a binary string\"\"\"\n",
         "    starting_array = arrayfrom_str(onesandzeros)\n",
         "    autom = cell_1D(rulenum, starting_array)\n",
         "    autom.simulate_ca(n_steps)\n",
@@ -311,7 +311,7 @@
         "\n",
         "  @classmethod\n",
         "  def sim_randarray_input(cls, n_steps, rulenum:int, cellslength: int, probability: float):\n",
-        "    \"\"\"factory\"\"\"\n",
+        "    \"\"\"Factory and drawer for automata based on a number of steps, the amount of cell spaces, and the probability decimal that a cell-space in the starting horizon will be alive.\"\"\"\n",
         "    starting_array = rand_array(cellslength, probability)\n",
         "    rand_autom = cell_1D(rulenum, starting_array)\n",
         "    rand_autom.simulate_ca(n_steps)\n",
