--- a/labs/lab07_cellular_automata.ipynb
+++ b/labs/lab07_cellular_automata.ipynb
@@ -314,23 +314,25 @@
         "\n",
         "  @classmethod\n",
         "  def sim_binarystr_input(cls, n_steps, rulenum: int, onesandzeros: str):\n",
-        "    \"\"\"Factory and drawer for automata based on a number of steps, the decimal-form rule number, and a binary string\"\"\"\n",
+        "    \"\"\"Factory for automata based on a number of steps, the decimal-form rule number, and a binary string\"\"\"\n",
         "    starting_array = arrayfrom_str(onesandzeros)\n",
         "    autom = cell_1D(rulenum, starting_array)\n",
         "    autom.simulate_ca(n_steps)\n",
-        "    automgraph = autom.draw()\n",
+        "    return autom\n",
         "\n",
         "  @classmethod\n",
         "  def sim_randarray_input(cls, n_steps, rulenum:int, cellslength: int, probability: float):\n",
-        "    \"\"\"Factory and drawer for automata based on a number of steps, the amount of cell spaces, and the probability decimal that a cell-space in the starting horizon will be alive.\"\"\"\n",
+        "    \"\"\"Factory for automata based on a number of steps, the amount of cell spaces, and the probability decimal that a cell-space in the starting horizon will be alive.\"\"\"\n",
         "    starting_array = rand_array(cellslength, probability)\n",
         "    rand_autom = cell_1D(rulenum, starting_array)\n",
         "    rand_autom.simulate_ca(n_steps)\n",
-        "    rand_autom.draw()\n",
+        "    return rand_autom\n",
         "\n",
-        "cell_1D.sim_binarystr_input(17, 90, '0000000000000001000000000000000')\n",
         "\n",
-        "cell_1D.sim_randarray_input(20, 90, 20, 0.2)"
+        "test1 = cell_1D.sim_binarystr_input(17, 90, '0000000000000001000000000000000')\n",
+        "test1.draw()\n",
+        "test2 = cell_1D.sim_randarray_input(20, 90, 20, 0.2)\n",
+        "test2.draw()"
       ],
       "metadata": {
         "pycharm": {
@@ -381,7 +383,17 @@
       "execution_count": 5,
       "outputs": [],
       "source": [
-        "# Solution for Ex. 3 here..."
+        "def experiment(n_spaces, p, n_steps):\n",
+        "  \"\"\"\n",
+        "  Demonstrates, making a random horizon of cells based on:\n",
+        "    -an amount of cell spaces to start with\n",
+        "    -the probability that each space will be alive\n",
+        "  that no matter what kind of line-of-cells started with,\n",
+        "    1. Rule\n",
+        "\n",
+        "  \"\"\"\n",
+        "  = rand_array(n_spaces, p)\n",
+        "\n"
       ],
       "metadata": {
         "pycharm": {
@@ -445,7 +457,7 @@
         "# Example: plot 4 plots in a 2x2 grid - plots are labelled so it's clear which is which.\n",
         "axes = axes_layout(2, 2, fig_title='Sample Plot of 2 x 2 grid of images')\n",
         "for ax, title in zip(axes.flat, ('top-left', 'top-right', 'bottom-left', 'bottom-right' )):\n",
-        "    plot_ca(ca_timesteps, axes=ax, title=f'This is plot {title}')"
+        "  plot_ca(ca_timesteps, axes=ax, title=f'This is plot {title}')"
       ],
       "metadata": {
         "pycharm": {
