--- a/labs/lab07_cellular_automata.ipynb
+++ b/labs/lab07_cellular_automata.ipynb
@@ -22,8 +22,8 @@
       "source": [
         "COMP 215 - LAB 7\n",
         "-----------------------------------------------\n",
-        "#### Name:\n",
-        "#### Date:\n",
+        "#### Name: Marcus Leung\n",
+        "#### Date: April 6 2025\n",
         "\n",
         "This lab exercise is an introduction to the elementary [Cellular Automata](https://en.wikipedia.org/wiki/Elementary_cellular_automaton) studied by [Stephen Wolfram](https://en.wikipedia.org/wiki/Stephen_Wolfram#Complex_systems_and_cellular_automata).\n",
         "\n",
@@ -511,6 +511,21 @@
           "name": "#%% md\n"
         },
         "id": "rIjlwciYYEbA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.\n",
+        "  If the starting array of cells is our variable, as every application of the rule-function to the variable would change the state of the variable, doing an n-th amount of repetitions of the rule-function would require that each execution of the function would have to use the variable that was updated by the previous execution. To do the n repetitions upon a variable that changes over time is, roughly speaking, the n-computations of an algorithm given the variable, or rather, the computation of a rule given a variable in n-steps.\n",
+        "  \n",
+        "  We could do this experiment without a computer, but with a gridded paper, a pencil to fill in squares, and a rulesheet which would be the cellular automata algorithm. The experiment this way would be like a single player tabletop game, but it would be time consuming for long starting-horizons of cells or a large amount of steps.\n",
+        "2.\n",
+        "\n",
+        "3."
+      ],
+      "metadata": {
+        "id": "ddzxf_ukIeA8"
       }
     }
   ],
