--- a/labs/lab07_cellular_automata.ipynb
+++ b/labs/lab07_cellular_automata.ipynb
@@ -521,8 +521,9 @@
         "  \n",
         "  We could do this experiment without a computer, but with a gridded paper, a pencil to fill in squares, and a rulesheet which would be the cellular automata algorithm. The experiment this way would be like a single player tabletop game, but it would be time consuming for long starting-horizons of cells or a large amount of steps.\n",
         "2.\n",
-        "\n",
-        "3."
+        "  Complex behaviours can't be analyzed like you would find the derivatives/integrals of an equation. You would have to simulate the complex behavior with data in a testing environment. This can't be done easily, or even at all, on paper, so I'd say it would be unintuitive to \"think-through\". We look for patterns based on comparing trials of experiments for understanding complex behavior, unlike mathematicians who look for equations that would abide by certain laws and thus be \"correct\".\n",
+        "3.\n",
+        "  We would have to document complex phenomena at intervals over a period of time, and compare how each 'moment' differs. With computation we could determine whether a complex phenomena over time repeats certain patterns or has no patterns."
       ],
       "metadata": {
         "id": "ddzxf_ukIeA8"
