--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2JgkpNk9WvsJnzpE/4jAp",
+      "authorship_tag": "ABX9TyMTxgoex3qGfig2OEWMEhIp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,19 +125,21 @@
         "\n",
         "\n",
         "{\n",
-        "  'race & ethnicity': ('race', 'racial', 'racialized', 'racism', 'racist', 'ethnicity', 'ethnic', 'xenophobia', 'xenophobic', 'segregational', 'segregation', 'colonialism', 'colonialist', 'colonial', 'colonization', 'colonized', 'decolonized', 'decolonization', 'decolonial', 'subaltern'),\n",
+        "  'race & ethnicity': ('race', 'racial', 'racialized', 'racism', 'racist', 'ethnicity', 'ethnic', 'ethnology', 'ethnologic', 'ethnological', 'xenophobia', 'xenophobic', 'segregational', 'segregation', 'segregate', 'segregated', 'colonialism', 'colonialist', 'colonial', 'colonization', 'colonized', 'decolonized', 'decolonization', 'decolonial', 'subaltern'),\n",
         "\n",
         "  'psychology': ('psychology', 'psychological', 'psychiatry', 'psychologist', 'psychiatrist', 'psychiatric', 'behavior', 'mental', 'mentally'),\n",
         "\n",
-        "  'media & art': ('media', 'art', 'arts', 'architecture', 'architectural', 'graphic design', 'designer', 'artist', 'artists', 'artistic', 'artisinal', 'artisan', 'artisans', 'sculpture', 'film', 'films', 'movie', 'movies', 'cinema', 'music', 'musical', 'theater', 'theatre', 'theatrical', 'radio', 'television', 'TV', 'video', 'videos', 'painting', 'paintings', 'painter', 'painters', 'platform', 'communication', 'literature', 'newspaper', 'internet'),\n",
+        "  'media & art': ('media', 'art', 'arts', 'architecture', 'architectural', 'graphic design', 'designer', 'artist', 'artists', 'artistic', 'artisinal', 'artisan', 'artisans', 'sculpture', 'film', 'films', 'movie', 'movies', 'cinema', 'music', 'musical', 'theater', 'theatre', 'theatrical', 'radio', 'broadcast', 'broadcasting', 'broadcasts', 'television', 'TV', 'video', 'videos', 'painting', 'paintings', 'painter', 'painters', 'platform', 'communication', 'literature', 'newspaper', 'internet'),\n",
         "\n",
-        "  'economics': ('economic', 'economics', 'economy', 'socioeconomic', 'finance', 'financial', 'money', 'trade', 'market', 'marketing', 'advertising', 'business', 'currency', 'corporate', 'corporation', 'debt'),\n",
+        "  'economics': ('economic', 'economics', 'economy', 'economies', 'socioeconomic', 'finance', 'financial', 'money', 'trade', 'market', 'marketing', 'advertising', 'business', 'currency', 'currencies', 'corporate', 'corporation', 'debt', 'poverty', 'impoverished', 'wealth', 'wealthy', 'microeconomic', 'microeconomics','macroeconomic', 'macroeconomics', 'worker', 'workers', 'jobs', 'employment', 'employee', 'employees', 'labor', 'union', 'unions', 'unionize', 'unionized', 'unionization', 'consume', 'consumption', 'consumerism', 'production', 'industry', 'industrial', 'industrialize', 'industrialized', 'industrializaton', 'industries'),\n",
         "\n",
         "  'gender & sexuality': ('gender', 'gendering', 'sexism', 'sexualization', 'sexuality', 'sex', 'heterosexuality', 'heterosexuality', 'misogyny', 'misogynistic', 'feminism', 'feminist', 'gendering', 'cisgender', 'masculine', 'male', 'man', 'boy', 'feminine', 'female', 'woman', 'girl', 'transgender', 'non-binary', 'nonbinary', 'queer', 'homosexual', 'homosexuality', 'gay', 'lesbian', 'bisexual', 'bisexuality', 'homophobia', 'homophobic', 'transphobia', 'transphobic'),\n",
         "\n",
-        "  'politics': ('politics', 'political', 'policy', 'policies', 'ideology', 'ideological', 'inequality', 'equality', 'equity', 'equitable', 'minister', 'administration', 'administrative', 'administrator', 'administrators', 'leader', 'leaders', 'leadership', 'president', 'presidency', 'management', 'state', 'country', 'national', 'nationalism', 'nationalization', 'international', 'transnational', 'globalization', 'globalized', 'government', 'governance', 'poverty', 'impoverished', 'disadvantaged', 'marginalized', 'marginalization', 'oppression', 'oppressed', 'war', 'wars', 'military', 'militaries', 'militant', 'surveillance', 'security', 'advocacy', 'protest', 'protests', 'protesting', 'activism', 'activist', 'climate', 'environment', 'environmental', 'warming', 'disaster'),\n",
+        "  'politics': ('politics', 'political', 'policy', 'policies', 'ideology', 'ideological', 'inequality', 'equality', 'equity', 'equitable', 'minister', 'administration', 'administrative', 'administrator', 'administrators', 'leader', 'leaders', 'leadership', 'president', 'presidency', 'management', 'state', 'country', 'privatize', 'privatized', 'privatization', 'national', 'nationality', 'nationalism', 'nationalization', 'nationalize', 'nationalized', 'international', 'internationalize', 'internationalized', 'transnational', 'transnationalize','transnationalized', 'globalism', 'globalization', 'globalize', 'globalized', 'government', 'governance', 'law', 'laws', 'legislature', 'legislations', 'legislation', 'regulation', 'democracy', 'democratic', 'freedom', 'disadvantaged', 'marginalized', 'marginalization', 'oppression', 'oppressed', 'war', 'wars', 'military', 'militaries', 'militant', 'surveillance', 'security', 'advocacy', 'protest', 'protests', 'protesting', 'solidarity', 'activism', 'activist', 'climate', 'environment', 'environmental', 'warming', 'disaster'),\n",
         "\n",
-        "  'history': ('history', 'historical', 'historic', 'ahistoric', 'century', 'centuries', 'archaeology', 'archaeological', 'historiography')\n",
+        "  'history': ('history', 'historical', 'historic', 'historicity', 'historicize', 'ahistoric', 'century', 'centuries', 'archaeology', 'archaeologic', 'archaeological', 'historiography' 'historiographic, historiographic'),\n",
+        "\n",
+        "  'culture': ('culture', 'cultures', 'cultural', 'subculture', 'subcultures', 'ethnography', 'ethnographic', 'religion', 'religions', 'religious', 'ritual', 'rituals', 'community', 'communities')\n",
         " }\n"
       ]
     }
