--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6d/v9jb8FSldSDNtnqz2I",
+      "authorship_tag": "ABX9TyNJSEseUsLSM3qE2h2Crjep",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,10 +121,7 @@
         "douban/goodreads book descriptions:\n",
         "find keywords that fall within a subject (e.g. \"marketing\" falls under \"business\", \"behavior\" falls under \"psychology\")\n",
         "\"\"\"\n",
-        "\n",
-        "\n",
-        "\n",
-        "{\n",
+        "genrekeys = {\n",
         "  'race & ethnicity': ('race', 'racial', 'racialized', 'racism', 'racist', 'ethnicity', 'ethnic', 'ethnology', 'ethnologic', 'ethnological', 'xenophobia', 'xenophobic', 'segregational', 'segregation', 'segregate', 'segregated', 'colonialism', 'colonialist', 'colonial', 'colonization', 'colonized', 'decolonized', 'decolonization', 'decolonial', 'subaltern'),\n",
         "\n",
         "  'psychology': ('psychology', 'psychological', 'psychiatry', 'psychologist', 'psychiatrist', 'psychiatric', 'behavior', 'behaviors','mental', 'mentally'),\n",
