--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJSEseUsLSM3qE2h2Crjep",
+      "authorship_tag": "ABX9TyPebIs9dDT79KdSaUUnmfCg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,12 +121,12 @@
         "douban/goodreads book descriptions:\n",
         "find keywords that fall within a subject (e.g. \"marketing\" falls under \"business\", \"behavior\" falls under \"psychology\")\n",
         "\"\"\"\n",
-        "genrekeys = {\n",
+        "genrekeys_en = {\n",
         "  'race & ethnicity': ('race', 'racial', 'racialized', 'racism', 'racist', 'ethnicity', 'ethnic', 'ethnology', 'ethnologic', 'ethnological', 'xenophobia', 'xenophobic', 'segregational', 'segregation', 'segregate', 'segregated', 'colonialism', 'colonialist', 'colonial', 'colonization', 'colonized', 'decolonized', 'decolonization', 'decolonial', 'subaltern'),\n",
         "\n",
         "  'psychology': ('psychology', 'psychological', 'psychiatry', 'psychologist', 'psychiatrist', 'psychiatric', 'behavior', 'behaviors','mental', 'mentally'),\n",
         "\n",
-        "  'media & art': ('media', 'art', 'arts', 'architecture', 'architect', 'architects', 'architectural', 'graphic design', 'designer', 'designers', 'artist', 'artists', 'artistic', 'artisinal', 'artisan', 'artisans', 'sculpture', 'film', 'films', 'movie', 'movies', 'cinema', 'music', 'musical', 'theater', 'theatre', 'theatrical', 'radio', 'broadcast', 'broadcasting', 'broadcasts', 'television', 'TV', 'video', 'videos', 'painting', 'paintings', 'painter', 'painters', 'platform', 'communication', 'literature', 'newspaper', 'internet'),\n",
+        "  'media & art': ('media', 'art', 'arts', 'architecture', 'architect', 'architects', 'architectural', 'graphic design', 'designer', 'designers', 'artist', 'artists', 'artistic', 'artisinal', 'artisan', 'artisans', 'sculpture', 'film', 'films', 'movie', 'movies', 'cinema', 'music', 'musical', 'theater', 'theatre', 'theatrical', 'radio', 'broadcast', 'broadcasting', 'broadcasts', 'television', 'TV', 'video', 'videos', 'painting', 'paintings', 'painter', 'painters', 'platform', 'communication', 'literature', 'newspaper', 'internet', 'entertainment'),\n",
         "\n",
         "  'economics': ('economic', 'economics', 'economist', 'economists', 'economy', 'economies', 'socioeconomic', 'finance', 'financial', 'money', 'trade', 'market', 'marketing', 'advertising', 'business', 'currency', 'currencies', 'corporate', 'corporation', 'debt', 'poverty', 'impoverished', 'wealth', 'wealthy', 'microeconomic', 'microeconomics','macroeconomic', 'macroeconomics', 'worker', 'workers', 'jobs', 'employment', 'employee', 'employees', 'labor', 'union', 'unions', 'unionize', 'unionized', 'unionization', 'consume', 'consumption', 'consumerism', 'production', 'industry', 'industrial', 'industrialize', 'industrialized', 'industrializaton', 'industries'),\n",
         "\n",
@@ -137,7 +137,18 @@
         "  'history': ('history', 'historical', 'historic', 'historian', 'historians', 'historicity', 'historicize', 'ahistoric', 'century', 'centuries', 'archaeology', 'archaeologic', 'archaeological', 'historiography' 'historiographic, historiographic'),\n",
         "\n",
         "  'culture': ('culture', 'cultures', 'cultural', 'subculture', 'subcultures', 'ethnography', 'ethnographic', 'religion', 'religions', 'religious', 'ritual', 'rituals', 'community', 'communities')\n",
-        " }\n"
+        " }\n",
+        "\n",
+        "genrekeys_cn = {\n",
+        "    '种族与民族':('种族'、'种族化'、'种族主义'、'种族主义者'、'民族性'、'民族'、'民族学'、'仇外心理'、'种族隔离'、'隔离'、'殖民主义'、'殖民主义者'、'殖民化'、'非殖民化'、'下属')\n",
+        ",\n",
+        "    '心理学':('心理学','心理','精神病学','心理学家','精神病学家','精神病的','行为','精神','精神上')\n",
+        ",\n",
+        "    '媒体与艺术':('媒体'、'艺术'、'建筑'、'建筑师'、'建筑'、'平面设计'、'设计师'、'艺术家'、'艺术的'、'手工的'、'工匠','雕塑'、'电影'、'音乐'、'音乐剧'、'剧院'、'戏剧'、'广播'、'电视'、'视频' '绘画', '画家', '画家们', '平台', '传播', '文学', '报纸', '网络', '娱乐')\n",
+        ",\n",
+        "\n",
+        "\n",
+        "}"
       ]
     }
   ]
