--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPebIs9dDT79KdSaUUnmfCg",
+      "authorship_tag": "ABX9TyMrQTTGYFjeZHmq+O+43G8f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,7 +130,7 @@
         "\n",
         "  'economics': ('economic', 'economics', 'economist', 'economists', 'economy', 'economies', 'socioeconomic', 'finance', 'financial', 'money', 'trade', 'market', 'marketing', 'advertising', 'business', 'currency', 'currencies', 'corporate', 'corporation', 'debt', 'poverty', 'impoverished', 'wealth', 'wealthy', 'microeconomic', 'microeconomics','macroeconomic', 'macroeconomics', 'worker', 'workers', 'jobs', 'employment', 'employee', 'employees', 'labor', 'union', 'unions', 'unionize', 'unionized', 'unionization', 'consume', 'consumption', 'consumerism', 'production', 'industry', 'industrial', 'industrialize', 'industrialized', 'industrializaton', 'industries'),\n",
         "\n",
-        "  'gender & sexuality': ('gender', 'gendering', 'sexism', 'sexualization', 'sexuality', 'sex', 'heterosexuality', 'heterosexuality', 'misogyny', 'misogynistic', 'feminism', 'feminist', 'gendering', 'cisgender', 'masculine', 'male', 'man', 'boy', 'feminine', 'female', 'woman', 'girl', 'transgender', 'non-binary', 'nonbinary', 'queer', 'homosexual', 'homosexuality', 'gay', 'lesbian', 'bisexual', 'bisexuality', 'homophobia', 'homophobic', 'transphobia', 'transphobic'),\n",
+        "  'gender & sexuality': ('gender', 'gendering', 'sexism', 'sexist', 'sexualization', 'sexuality', 'sex', 'heterosexuality', 'heterosexuality', 'misogyny', 'misogynistic', 'feminism', 'feminist', 'gendering', 'cisgender', 'masculine', 'male', 'man', 'boy', 'feminine', 'female', 'woman', 'girl', 'transgender', 'non-binary', 'nonbinary', 'queer', 'homosexual', 'homosexuality', 'gay', 'lesbian', 'bisexual', 'bisexuality', 'homophobia', 'homophobic', 'transphobia', 'transphobic'),\n",
         "\n",
         "  'politics': ('politics', 'political', 'politician', 'politicians', 'policy', 'policies', 'ideology', 'ideological', 'inequality', 'equality', 'equity', 'equitable', 'minister', 'administration', 'administrative', 'administrator', 'administrators', 'leader', 'leaders', 'leadership', 'president', 'presidency', 'management', 'state', 'country', 'privatize', 'privatized', 'privatization', 'national', 'nationality', 'nationalism', 'nationalization', 'nationalize', 'nationalized', 'international', 'internationalize', 'internationalized', 'transnational', 'transnationalize','transnationalized', 'globalism', 'globalization', 'globalize', 'globalized', 'government', 'governance', 'law', 'laws', 'legislature', 'legislations', 'legislation', 'regulation', 'democracy', 'democratic', 'freedom', 'disadvantaged', 'marginalized', 'marginalization', 'oppression', 'oppressed', 'war', 'wars', 'military', 'militaries', 'militant', 'surveillance', 'security', 'advocacy', 'protest', 'protests', 'protesting', 'solidarity', 'activism', 'activist', 'climate', 'environment', 'environmental', 'warming', 'disaster'),\n",
         "\n",
@@ -146,7 +146,10 @@
         ",\n",
         "    '媒体与艺术':('媒体'、'艺术'、'建筑'、'建筑师'、'建筑'、'平面设计'、'设计师'、'艺术家'、'艺术的'、'手工的'、'工匠','雕塑'、'电影'、'音乐'、'音乐剧'、'剧院'、'戏剧'、'广播'、'电视'、'视频' '绘画', '画家', '画家们', '平台', '传播', '文学', '报纸', '网络', '娱乐')\n",
         ",\n",
-        "\n",
+        "    '经济学':('经济'、'经济学'、'经济学家'、'经济'、'社会经济'、'金融'、'金钱'、'贸易'、'市场'、'营销'、'广告'、'商业'、'货币'、'企业'、'公司'、'债务'、'贫困'、'财富','富裕','微观经济'、'宏观经济'、'工人'、'工作'、'就业'、'雇员'、'劳工'、'工会','工会化'、'工会化'、'消费'、'消费主义'、'生产','工业','工业化')\n",
+        ",\n",
+        "    '性别与性取向':('性别'、'性别化'、'性别歧视'、'性别歧视者','性化'、'性取向'、'性别'、'异性恋'、'厌女症'、'女权主义者'、'性别化'、'顺性别'、'男人'、'男孩'、'女性化'、'女人'、'女孩'、'跨性别者'、'非二元性别者'、'酷儿'、'同性恋'、'男同性恋'、'女同性恋','双性恋','恐同','跨性别恐惧症')\n",
+        ",\n",
         "\n",
         "}"
       ]
