--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHnaOrKwdHT8loH6IR/UUE",
+      "authorship_tag": "ABX9TyOl5JGjFHAZTizXOG3sQ3xS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -140,21 +140,21 @@
         " }\n",
         "\n",
         "genrekeys_cn = {\n",
-        "    '种族与民族':('种族'、'种族化'、'种族主义'、'种族主义者'、'民族性'、'民族'、'民族学'、'仇外心理'、'种族隔离'、'隔离'、'殖民主义'、'殖民主义者'、'殖民化'、'非殖民化'、'下属')\n",
+        "    'race & ethnicity':('种族'、'种族化'、'种族主义'、'种族主义者'、'民族性'、'民族'、'民族学'、'仇外心理'、'种族隔离'、'隔离'、'殖民主义'、'殖民主义者'、'殖民化'、'非殖民化'、'下属')\n",
         ",\n",
-        "    '心理学':('心理学','心理','精神病学','心理学家','精神病学家','精神病的','行为','精神','精神上')\n",
+        "    'psychology':('心理学','心理','精神病学','心理学家','精神病学家','精神病的','行为','精神','精神上')\n",
         ",\n",
-        "    '媒体与艺术':('媒体'、'艺术'、'建筑'、'建筑师'、'建筑'、'平面设计'、'设计师'、'艺术家'、'艺术的'、'手工的'、'工匠','雕塑'、'电影'、'音乐'、'音乐剧'、'剧院'、'戏剧'、'广播'、'电视'、'视频' '绘画', '画家', '画家们', '平台', '传播', '文学', '报纸', '网络', '娱乐')\n",
+        "    'media & art':('媒体'、'艺术'、'建筑'、'建筑师'、'建筑'、'平面设计'、'设计师'、'艺术家'、'艺术的'、'手工的'、'工匠','雕塑'、'电影'、'音乐'、'音乐剧'、'剧院'、'戏剧'、'广播'、'电视'、'视频' '绘画', '画家', '画家们', '平台', '传播', '文学', '报纸', '网络', '娱乐')\n",
         ",\n",
-        "    '经济学':('经济'、'经济学'、'经济学家'、'经济'、'社会经济'、'金融'、'金钱'、'贸易'、'市场'、'营销'、'广告'、'商业'、'货币'、'企业'、'公司'、'债务'、'贫困'、'财富','富裕','微观经济'、'宏观经济'、'工人'、'工作'、'就业'、'雇员'、'劳工'、'工会','工会化'、'工会化'、'消费'、'消费主义'、'生产','工业','工业化')\n",
+        "    'economics':('经济'、'经济学'、'经济学家'、'经济'、'社会经济'、'金融'、'金钱'、'贸易'、'市场'、'营销'、'广告'、'商业'、'货币'、'企业'、'公司'、'债务'、'贫困'、'财富','富裕','微观经济'、'宏观经济'、'工人'、'工作'、'就业'、'雇员'、'劳工'、'工会','工会化'、'工会化'、'消费'、'消费主义'、'生产','工业','工业化')\n",
         ",\n",
-        "    '性别与性取向':('性别'、'性别化'、'性别歧视'、'性别歧视者','性化'、'性取向'、'性别'、'异性恋'、'厌女症'、'女权主义者'、'性别化'、'顺性别'、'男人'、'男孩'、'女性化'、'女人'、'女孩'、'跨性别者'、'非二元性别者'、'酷儿'、'同性恋'、'男同性恋'、'女同性恋','双性恋','恐同','跨性别恐惧症')\n",
+        "    'gender & sexuality':('性别'、'性别化'、'性别歧视'、'性别歧视者','性化'、'性取向'、'性别'、'异性恋'、'厌女症'、'女权主义者'、'性别化'、'顺性别'、'男人'、'男孩'、'女性化'、'女人'、'女孩'、'跨性别者'、'非二元性别者'、'酷儿'、'同性恋'、'男同性恋'、'女同性恋','双性恋','恐同','跨性别恐惧症')\n",
         ",\n",
-        "    '政治':('政治','政治家','政策','意识形态','不平等','平等','公平','部长','行政','管理员','领导者','领导力','总统','总统职位','管理','国家','私有化','国家','国籍','民族主义','国有化','国际', '国际化', '跨国', '跨国化', '全球主义', '全球化', '全球化', '政府', '治理', '法律', '立法机关', '立法', '监管', '民主', '民主的', '自由', '弱势群体','边缘化','压迫', '被压迫','战争','军事','军队','好战','监视','安全','倡导','抗议','团结','行动主义','活动家','气候'、'环境'、'环境的'、'变暖'、'灾难')\n",
+        "    'politics':('政治','政治家','政策','意识形态','不平等','平等','公平','部长','行政','管理员','领导者','领导力','总统','总统职位','管理','国家','私有化','国家','国籍','民族主义','国有化','国际', '国际化', '跨国', '跨国化', '全球主义', '全球化', '全球化', '政府', '治理', '法律', '立法机关', '立法', '监管', '民主', '民主的', '自由', '弱势群体','边缘化','压迫', '被压迫','战争','军事','军队','好战','监视','安全','倡导','抗议','团结','行动主义','活动家','气候'、'环境'、'环境的'、'变暖'、'灾难')\n",
         ",\n",
-        "    '历史':('历史'、'历史的'、'历史学家','历史化','非历史的','世纪','考古学','史学')\n",
+        "    'history':('历史'、'历史的'、'历史学家','历史化','非历史的','世纪','考古学','史学')\n",
         ",\n",
-        "    '文化':('文化','亚文化','民族志','宗教','仪式','社区')\n",
+        "    'culture':('文化','亚文化','民族志','宗教','仪式','社区')\n",
         "}"
       ]
     }
