--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOl5JGjFHAZTizXOG3sQ3xS",
+      "authorship_tag": "ABX9TyNjWY9lAMiAs2GyhOXjYzLP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,6 +87,21 @@
         "#https://book.douban.com/tag/%E7%A4%BE%E4%BC%9A%E5%AD%A6\n",
         "#https://www.librarything.com/tag/sociology\n",
         "#https://www.goodreads.com/\n",
+        "\n",
+        "from dataclasses import dataclass\n",
+        "\n",
+        "@dataclass\n",
+        "class book:\n",
+        "\n",
+        "  title: str\n",
+        "  author: str\n",
+        "  ISBN10digit: str\n",
+        "  ISBN13digit: str\n",
+        "  genres: tuple\n",
+        "\n",
+        "  raters: int\n",
+        "  rating: float\n",
+        "\n",
         "\n",
         "\"\"\"\n",
         "For both sites: for each book in the sociology category, sorted by most to least popular:\n",
