--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjWY9lAMiAs2GyhOXjYzLP",
+      "authorship_tag": "ABX9TyO7TsPzqTuwiuG4DHH27Hd5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Sung4ji3/comp215/blob/main/douban.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install MechanicalSoup"
+      ],
+      "metadata": {
+        "id": "IhWF1go5PBbZ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -67,21 +78,9 @@
         "  (-To what degree are the most popular sociological books in china are available in the west (and vice versa)?)\n",
         "\"\"\"\n",
         "\n",
-        "\n",
-        "# https://webscraping.fyi/lib/language/python/ | Python - Web Scraping FYI\n",
-        "# https://webscraping.fyi/lib/python/scrapy/ | Python scrapy Library in Web Scraping - Web Scraping FYI\n",
-        "# https://www.python-httpx.org/ | HTTPX\n",
-        "# https://pypi.org/project/httpx/ | httpx · PyPI\n",
-        "# https://scrapy.org/ | Scrapy | A Fast and Powerful Scraping and Web Crawling Framework\n",
-        "# https://medium.com/@shahriar.atik/a-detailed-guide-on-httpx-9fec63536be5 | A Detailed Guide on httpx. httpx is a fast web application… | by Md Shahriar Atik Shifat | Medium\n",
-        "# https://realpython.com/python-web-scraping-practical-introduction/\n",
-        "# https://www.geeksforgeeks.org/python-web-scraping-tutorial/\n",
-        "\n",
-        "# https://thepythoncode.com/article/translate-text-in-python\n",
-        "# https://pypi.org/project/deep-translator/\n",
-        "# https://lokalise.com/blog/how-to-translate-languages-in-python-with-google-translate-and-deepl-plus-more/\n",
-        "\n",
-        "import httpx, scrapy, asyncio, aiohttp\n",
+        "from bs4 import beautifulsoup\n",
+        "import mechanicalsoup\n",
+        "from html.parser import HTMLParser\n",
         "from pprint import pprint\n",
         "\n",
         "#https://book.douban.com/tag/%E7%A4%BE%E4%BC%9A%E5%AD%A6\n",
@@ -101,6 +100,7 @@
         "\n",
         "  raters: int\n",
         "  rating: float\n",
+        "\n",
         "\n",
         "\n",
         "\"\"\"\n",
@@ -136,6 +136,25 @@
         "douban/goodreads book descriptions:\n",
         "find keywords that fall within a subject (e.g. \"marketing\" falls under \"business\", \"behavior\" falls under \"psychology\")\n",
         "\"\"\"\n",
+        "\n",
+        "\n",
+        "\"\"\"\n",
+        "find differences:\n",
+        "count how many matches between both datasets\n",
+        "  divide the common books by the entire datasets to find how much of the datasets have unique differences\n",
+        "  find difference in ratings of common books between datasets:\n",
+        "    db: r/10\n",
+        "    gr: r/5\n",
+        "    find the mean of both sets of ratings and compare difference\n",
+        "    find how many ratings were given in comparison\n",
+        "  compare difference of occurences of genrekeys\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "genrekeys_en = {\n",
         "  'race & ethnicity': ('race', 'racial', 'racialized', 'racism', 'racist', 'ethnicity', 'ethnic', 'ethnology', 'ethnologic', 'ethnological', 'xenophobia', 'xenophobic', 'segregational', 'segregation', 'segregate', 'segregated', 'colonialism', 'colonialist', 'colonial', 'colonization', 'colonized', 'decolonized', 'decolonization', 'decolonial', 'subaltern'),\n",
         "\n",
