--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJFPqzernmNV9oXtbXybIj",
+      "authorship_tag": "ABX9TyNr8P2TaSon/6cfZ8H9XvyR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,17 +32,42 @@
         "!pip install MechanicalSoup"
       ],
       "metadata": {
-        "id": "IhWF1go5PBbZ"
+        "id": "IhWF1go5PBbZ",
+        "outputId": "b3eba904-3eb9-4406-a508-76ce6abcecfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting MechanicalSoup\n",
+            "  Downloading MechanicalSoup-1.3.0-py3-none-any.whl.metadata (6.0 kB)\n",
+            "Requirement already satisfied: requests>=2.22.0 in /usr/local/lib/python3.11/dist-packages (from MechanicalSoup) (2.32.3)\n",
+            "Requirement already satisfied: beautifulsoup4>=4.7 in /usr/local/lib/python3.11/dist-packages (from MechanicalSoup) (4.13.3)\n",
+            "Requirement already satisfied: lxml in /usr/local/lib/python3.11/dist-packages (from MechanicalSoup) (5.3.1)\n",
+            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.11/dist-packages (from beautifulsoup4>=4.7->MechanicalSoup) (2.6)\n",
+            "Requirement already satisfied: typing-extensions>=4.0.0 in /usr/local/lib/python3.11/dist-packages (from beautifulsoup4>=4.7->MechanicalSoup) (4.13.1)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (3.4.1)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (2.3.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (2025.1.31)\n",
+            "Downloading MechanicalSoup-1.3.0-py3-none-any.whl (19 kB)\n",
+            "Installing collected packages: MechanicalSoup\n",
+            "Successfully installed MechanicalSoup-1.3.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "sNtydHYmFjVY",
-        "outputId": "5f388dc6-ccdf-4254-f78b-1bb482de5a14",
+        "outputId": "41046092-0dfa-46ae-dfc4-68448835c831",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -51,9 +76,9 @@
         {
           "output_type": "error",
           "ename": "SyntaxError",
-          "evalue": "invalid character '、' (U+3001) (<ipython-input-1-c1478ec731a7>, line 108)",
+          "evalue": "invalid character '、' (U+3001) (<ipython-input-4-59bc0b4d3be1>, line 108)",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-c1478ec731a7>\"\u001b[0;36m, line \u001b[0;32m108\u001b[0m\n\u001b[0;31m    'race & ethnicity':('种族'、'种族化'、'种族主义'、'种族主义者'、'民族性'、'民族'、'民族学'、'仇外心理'、'种族隔离'、'隔离'、'殖民主义'、'殖民主义者'、'殖民化'、'非殖民化'、'下属')\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '、' (U+3001)\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-59bc0b4d3be1>\"\u001b[0;36m, line \u001b[0;32m108\u001b[0m\n\u001b[0;31m    'race & ethnicity':('种族'、'种族化'、'种族主义'、'种族主义者'、'民族性'、'民族'、'民族学'、'仇外心理'、'种族隔离'、'隔离'、'殖民主义'、'殖民主义者'、'殖民化'、'非殖民化'、'下属'),\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '、' (U+3001)\n"
           ]
         }
       ],
@@ -72,7 +97,7 @@
         "browser.open('https://book.douban.com/tag/%E7%A4%BE%E4%BC%9A%E5%AD%A6')\n",
         "db_tagpage = browser.page\n",
         "\n",
-        "print(db_tagpage.prettyfy)\n",
+        "print(db_tagpage.prettify)\n",
         "\n",
         "\n",
         "#https://www.librarything.com/tag/sociology\n",
@@ -165,20 +190,20 @@
         " }\n",
         "\n",
         "genrekeys_cn = {\n",
-        "    'race & ethnicity':('种族'、'种族化'、'种族主义'、'种族主义者'、'民族性'、'民族'、'民族学'、'仇外心理'、'种族隔离'、'隔离'、'殖民主义'、'殖民主义者'、'殖民化'、'非殖民化'、'下属')\n",
-        ",\n",
-        "    'psychology':('心理学','心理','精神病学','心理学家','精神病学家','精神病的','行为','精神','精神上')\n",
-        ",\n",
-        "    'media & art':('媒体'、'艺术'、'建筑'、'建筑师'、'建筑'、'平面设计'、'设计师'、'艺术家'、'艺术的'、'手工的'、'工匠','雕塑'、'电影'、'音乐'、'音乐剧'、'剧院'、'戏剧'、'广播'、'电视'、'视频' '绘画', '画家', '画家们', '平台', '传播', '文学', '报纸', '网络', '娱乐')\n",
-        ",\n",
-        "    'economics':('经济'、'经济学'、'经济学家'、'经济'、'社会经济'、'金融'、'金钱'、'贸易'、'市场'、'营销'、'广告'、'商业'、'货币'、'企业'、'公司'、'债务'、'贫困'、'财富','富裕','微观经济'、'宏观经济'、'工人'、'工作'、'就业'、'雇员'、'劳工'、'工会','工会化'、'工会化'、'消费'、'消费主义'、'生产','工业','工业化')\n",
-        ",\n",
-        "    'gender & sexuality':('性别'、'性别化'、'性别歧视'、'性别歧视者','性化'、'性取向'、'性别'、'异性恋'、'厌女症'、'女权主义者'、'性别化'、'顺性别'、'男人'、'男孩'、'女性化'、'女人'、'女孩'、'跨性别者'、'非二元性别者'、'酷儿'、'同性恋'、'男同性恋'、'女同性恋','双性恋','恐同','跨性别恐惧症')\n",
-        ",\n",
-        "    'politics':('政治','政治家','政策','意识形态','不平等','平等','公平','部长','行政','管理员','领导者','领导力','总统','总统职位','管理','国家','私有化','国家','国籍','民族主义','国有化','国际', '国际化', '跨国', '跨国化', '全球主义', '全球化', '全球化', '政府', '治理', '法律', '立法机关', '立法', '监管', '民主', '民主的', '自由', '弱势群体','边缘化','压迫', '被压迫','战争','军事','军队','好战','监视','安全','倡导','抗议','团结','行动主义','活动家','气候'、'环境'、'环境的'、'变暖'、'灾难')\n",
-        ",\n",
-        "    'history':('历史'、'历史的'、'历史学家','历史化','非历史的','世纪','考古学','史学')\n",
-        ",\n",
+        "    'race & ethnicity':('种族'、'种族化'、'种族主义'、'种族主义者'、'民族性'、'民族'、'民族学'、'仇外心理'、'种族隔离'、'隔离'、'殖民主义'、'殖民主义者'、'殖民化'、'非殖民化'、'下属'),\n",
+        "\n",
+        "    'psychology':('心理学','心理','精神病学','心理学家','精神病学家','精神病的','行为','精神','精神上'),\n",
+        "\n",
+        "    'media & art':('媒体'、'艺术'、'建筑'、'建筑师'、'建筑'、'平面设计'、'设计师'、'艺术家'、'艺术的'、'手工的'、'工匠','雕塑'、'电影'、'音乐'、'音乐剧'、'剧院'、'戏剧'、'广播'、'电视'、'视频' '绘画', '画家', '画家们', '平台', '传播', '文学', '报纸', '网络', '娱乐'),\n",
+        "\n",
+        "    'economics':('经济'、'经济学'、'经济学家'、'经济'、'社会经济'、'金融'、'金钱'、'贸易'、'市场'、'营销'、'广告'、'商业'、'货币'、'企业'、'公司'、'债务'、'贫困'、'财富','富裕','微观经济'、'宏观经济'、'工人'、'工作'、'就业'、'雇员'、'劳工'、'工会','工会化'、'工会化'、'消费'、'消费主义'、'生产','工业','工业化'),\n",
+        "\n",
+        "    'gender & sexuality':('性别'、'性别化'、'性别歧视'、'性别歧视者','性化'、'性取向'、'性别'、'异性恋'、'厌女症'、'女权主义者'、'性别化'、'顺性别'、'男人'、'男孩'、'女性化'、'女人'、'女孩'、'跨性别者'、'非二元性别者'、'酷儿'、'同性恋'、'男同性恋'、'女同性恋','双性恋','恐同','跨性别恐惧症'),\n",
+        "\n",
+        "    'politics':('政治','政治家','政策','意识形态','不平等','平等','公平','部长','行政','管理员','领导者','领导力','总统','总统职位','管理','国家','私有化','国家','国籍','民族主义','国有化','国际', '国际化', '跨国', '跨国化', '全球主义', '全球化', '全球化', '政府', '治理', '法律', '立法机关', '立法', '监管', '民主', '民主的', '自由', '弱势群体','边缘化','压迫', '被压迫','战争','军事','军队','好战','监视','安全','倡导','抗议','团结','行动主义','活动家','气候'、'环境'、'环境的'、'变暖'、'灾难'),\n",
+        "\n",
+        "    'history':('历史'、'历史的'、'历史学家','历史化','非历史的','世纪','考古学','史学'),\n",
+        "\n",
         "    'culture':('文化','亚文化','民族志','宗教','仪式','社区')\n",
         "}"
       ]
