--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZuYCs+vkg9HEdSmbaegDW",
+      "authorship_tag": "ABX9TyM4HIirzTN+XT2GHoewFcSk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,19 +33,18 @@
       ],
       "metadata": {
         "id": "IhWF1go5PBbZ",
-        "outputId": "b3eba904-3eb9-4406-a508-76ce6abcecfd",
+        "outputId": "3a28ff06-4463-42b2-e659-3e1a1c26d308",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting MechanicalSoup\n",
-            "  Downloading MechanicalSoup-1.3.0-py3-none-any.whl.metadata (6.0 kB)\n",
+            "Requirement already satisfied: MechanicalSoup in /usr/local/lib/python3.11/dist-packages (1.3.0)\n",
             "Requirement already satisfied: requests>=2.22.0 in /usr/local/lib/python3.11/dist-packages (from MechanicalSoup) (2.32.3)\n",
             "Requirement already satisfied: beautifulsoup4>=4.7 in /usr/local/lib/python3.11/dist-packages (from MechanicalSoup) (4.13.3)\n",
             "Requirement already satisfied: lxml in /usr/local/lib/python3.11/dist-packages (from MechanicalSoup) (5.3.1)\n",
@@ -54,31 +53,27 @@
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (3.4.1)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (3.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (2.3.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (2025.1.31)\n",
-            "Downloading MechanicalSoup-1.3.0-py3-none-any.whl (19 kB)\n",
-            "Installing collected packages: MechanicalSoup\n",
-            "Successfully installed MechanicalSoup-1.3.0\n"
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (2025.1.31)\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "sNtydHYmFjVY",
-        "outputId": "41046092-0dfa-46ae-dfc4-68448835c831",
+        "outputId": "dba6b34c-10c2-4aed-f116-227d131eee2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid character '、' (U+3001) (<ipython-input-4-59bc0b4d3be1>, line 108)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-59bc0b4d3be1>\"\u001b[0;36m, line \u001b[0;32m108\u001b[0m\n\u001b[0;31m    'race & ethnicity':('种族'、'种族化'、'种族主义'、'种族主义者'、'民族性'、'民族'、'民族学'、'仇外心理'、'种族隔离'、'隔离'、'殖民主义'、'殖民主义者'、'殖民化'、'非殖民化'、'下属'),\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '、' (U+3001)\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<Response [403]>\n"
           ]
         }
       ],
@@ -90,16 +85,17 @@
         "  (-To what degree are the most popular sociological books in china are available in the west (and vice versa)?)\n",
         "\"\"\"\n",
         "from html.parser import HTMLParser\n",
-        "from bs4 import beautifulsoup\n",
+        "from bs4 import BeautifulSoup\n",
         "import mechanicalsoup\n",
         "\n",
         "browser = mechanicalsoup.StatefulBrowser()\n",
-        "browser.open('https://book.douban.com/tag/%E7%A4%BE%E4%BC%9A%E5%AD%A6')\n",
-        "db_tagpage = browser.page\n",
-        "\n",
-        "print(db_tagpage.prettify)\n",
+        "print(browser.open(\"\"))\n",
         "\n",
         "\n",
+        "\n",
+        "\n",
+        "\n",
+        "#https://book.douban.com/tag/%E7%A4%BE%E4%BC%9A%E5%AD%A6\n",
         "#https://www.librarything.com/tag/sociology\n",
         "#https://www.goodreads.com/\n",
         "\n",
