--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4HIirzTN+XT2GHoewFcSk",
+      "authorship_tag": "ABX9TyMehU6fDN9rVr+qhqUibxJb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,34 +29,13 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install MechanicalSoup"
+        "!pip install selenium"
       ],
       "metadata": {
-        "id": "IhWF1go5PBbZ",
-        "outputId": "3a28ff06-4463-42b2-e659-3e1a1c26d308",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "vR2Vd_w8XnkK"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: MechanicalSoup in /usr/local/lib/python3.11/dist-packages (1.3.0)\n",
-            "Requirement already satisfied: requests>=2.22.0 in /usr/local/lib/python3.11/dist-packages (from MechanicalSoup) (2.32.3)\n",
-            "Requirement already satisfied: beautifulsoup4>=4.7 in /usr/local/lib/python3.11/dist-packages (from MechanicalSoup) (4.13.3)\n",
-            "Requirement already satisfied: lxml in /usr/local/lib/python3.11/dist-packages (from MechanicalSoup) (5.3.1)\n",
-            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.11/dist-packages (from beautifulsoup4>=4.7->MechanicalSoup) (2.6)\n",
-            "Requirement already satisfied: typing-extensions>=4.0.0 in /usr/local/lib/python3.11/dist-packages (from beautifulsoup4>=4.7->MechanicalSoup) (4.13.1)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (3.4.1)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (2.3.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.22.0->MechanicalSoup) (2025.1.31)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -84,15 +63,9 @@
         "  -How are the ratings by western and chinese readers for the same popular sociological works of the west and of china compare?\n",
         "  (-To what degree are the most popular sociological books in china are available in the west (and vice versa)?)\n",
         "\"\"\"\n",
-        "from html.parser import HTMLParser\n",
-        "from bs4 import BeautifulSoup\n",
-        "import mechanicalsoup\n",
-        "\n",
-        "browser = mechanicalsoup.StatefulBrowser()\n",
-        "print(browser.open(\"\"))\n",
-        "\n",
-        "\n",
-        "\n",
+        "#https://www.selenium.dev/documentation/webdriver/getting_started/install_library/\n",
+        "#https://pypi.org/project/selenium/\n",
+        "#https://selenium-python.readthedocs.io/installation.html\n",
         "\n",
         "\n",
         "#https://book.douban.com/tag/%E7%A4%BE%E4%BC%9A%E5%AD%A6\n",
